@@ -749,6 +749,146 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+comment|// BlenderType.EXPONENTIAL_RECIPROCAL is using 1/(pow(1+p, exponent)) * w where w is weight and p the position of the word
+name|suggester
+operator|=
+operator|new
+name|BlendedInfixSuggester
+argument_list|(
+name|newFSDirectory
+argument_list|(
+name|tempDir
+argument_list|)
+argument_list|,
+name|a
+argument_list|,
+name|a
+argument_list|,
+name|AnalyzingInfixSuggester
+operator|.
+name|DEFAULT_MIN_PREFIX_CHARS
+argument_list|,
+name|BlendedInfixSuggester
+operator|.
+name|BlenderType
+operator|.
+name|POSITION_EXPONENTIAL_RECIPROCAL
+argument_list|,
+literal|1
+argument_list|,
+literal|4.0
+argument_list|,
+literal|false
+argument_list|,
+literal|true
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|suggester
+operator|.
+name|build
+argument_list|(
+operator|new
+name|InputArrayIterator
+argument_list|(
+name|keys
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|w
+argument_list|,
+name|getInResults
+argument_list|(
+name|suggester
+argument_list|,
+literal|"top"
+argument_list|,
+name|pl
+argument_list|,
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+call|(
+name|int
+call|)
+argument_list|(
+name|w
+operator|*
+literal|1
+operator|/
+operator|(
+name|Math
+operator|.
+name|pow
+argument_list|(
+literal|1
+operator|+
+literal|2
+argument_list|,
+literal|4.0
+argument_list|)
+operator|)
+argument_list|)
+argument_list|,
+name|getInResults
+argument_list|(
+name|suggester
+argument_list|,
+literal|"the"
+argument_list|,
+name|pl
+argument_list|,
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+call|(
+name|int
+call|)
+argument_list|(
+name|w
+operator|*
+literal|1
+operator|/
+operator|(
+name|Math
+operator|.
+name|pow
+argument_list|(
+literal|1
+operator|+
+literal|3
+argument_list|,
+literal|4.0
+argument_list|)
+operator|)
+argument_list|)
+argument_list|,
+name|getInResults
+argument_list|(
+name|suggester
+argument_list|,
+literal|"lake"
+argument_list|,
+name|pl
+argument_list|,
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|suggester
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 block|}
 comment|/**    * Assert that the factor is important to get results that might be lower in term of weight but    * would be pushed up after the blending transformation    */
 DECL|method|testRequiresMore
