@@ -66,6 +66,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Locale
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Set
 import|;
 end_import
@@ -133,6 +143,8 @@ operator|.
 name|analyzing
 operator|.
 name|BlendedInfixSuggester
+operator|.
+name|BlenderType
 import|;
 end_import
 
@@ -151,8 +163,6 @@ operator|.
 name|analyzing
 operator|.
 name|BlendedInfixSuggester
-operator|.
-name|BlenderType
 import|;
 end_import
 
@@ -249,6 +259,15 @@ name|String
 name|BLENDER_TYPE
 init|=
 literal|"blenderType"
+decl_stmt|;
+DECL|field|EXPONENT
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|EXPONENT
+init|=
+literal|"exponent"
 decl_stmt|;
 comment|/**     * Factor to multiply the number of searched elements    * Default is 10    */
 DECL|field|NUM_FACTOR
@@ -568,6 +587,35 @@ name|BlendedInfixSuggester
 operator|.
 name|DEFAULT_NUM_FACTOR
 decl_stmt|;
+name|Double
+name|exponent
+init|=
+name|params
+operator|.
+name|get
+argument_list|(
+name|EXPONENT
+argument_list|)
+operator|==
+literal|null
+condition|?
+literal|null
+else|:
+name|Double
+operator|.
+name|valueOf
+argument_list|(
+name|params
+operator|.
+name|get
+argument_list|(
+name|EXPONENT
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+decl_stmt|;
 try|try
 block|{
 return|return
@@ -597,6 +645,8 @@ argument_list|,
 name|blenderType
 argument_list|,
 name|numFactor
+argument_list|,
+name|exponent
 argument_list|,
 literal|true
 argument_list|,
@@ -782,24 +832,23 @@ name|blenderTypeParam
 operator|.
 name|toString
 argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|blenderTypeStr
 operator|.
-name|equalsIgnoreCase
+name|toUpperCase
 argument_list|(
-literal|"reciprocal"
+name|Locale
+operator|.
+name|ROOT
 argument_list|)
-condition|)
-block|{
+decl_stmt|;
 name|blenderType
 operator|=
 name|BlenderType
 operator|.
-name|POSITION_RECIPROCAL
+name|valueOf
+argument_list|(
+name|blenderTypeStr
+argument_list|)
 expr_stmt|;
-block|}
 block|}
 return|return
 name|blenderType
