@@ -201,6 +201,114 @@ literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_reciprocal']/ls
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testExponentialReciprocalBlenderTypeExponent1
+specifier|public
+name|void
+name|testExponentialReciprocalBlenderTypeExponent1
+parameter_list|()
+block|{
+comment|//exponent=1 will give same output as reciprocal
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+name|URI
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"the"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_COUNT
+argument_list|,
+literal|"10"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_DICT
+argument_list|,
+literal|"blended_infix_suggest_exponential_reciprocal_1"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_exponential_reciprocal_1']/lst[@name='the']/int[@name='numFound'][.='3']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_exponential_reciprocal_1']/lst[@name='the']/arr[@name='suggestions']/lst[1]/str[@name='term'][.='<b>the</b> returned']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_exponential_reciprocal_1']/lst[@name='the']/arr[@name='suggestions']/lst[1]/long[@name='weight'][.='10']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_exponential_reciprocal_1']/lst[@name='the']/arr[@name='suggestions']/lst[1]/str[@name='payload'][.='ret']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_exponential_reciprocal_1']/lst[@name='the']/arr[@name='suggestions']/lst[2]/str[@name='term'][.='top of<b>the</b> lake']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_exponential_reciprocal_1']/lst[@name='the']/arr[@name='suggestions']/lst[2]/long[@name='weight'][.='6']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_exponential_reciprocal_1']/lst[@name='the']/arr[@name='suggestions']/lst[2]/str[@name='payload'][.='lake']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_exponential_reciprocal_1']/lst[@name='the']/arr[@name='suggestions']/lst[3]/str[@name='term'][.='star wars: episode v -<b>the</b> empire strikes back']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_exponential_reciprocal_1']/lst[@name='the']/arr[@name='suggestions']/lst[3]/long[@name='weight'][.='2']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_exponential_reciprocal_1']/lst[@name='the']/arr[@name='suggestions']/lst[3]/str[@name='payload'][.='star']"
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testExponentialReciprocalBlenderType
+specifier|public
+name|void
+name|testExponentialReciprocalBlenderType
+parameter_list|()
+block|{
+comment|// default is exponent=2.0
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+name|URI
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"the"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_COUNT
+argument_list|,
+literal|"10"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_DICT
+argument_list|,
+literal|"blended_infix_suggest_exponential_reciprocal"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_exponential_reciprocal']/lst[@name='the']/int[@name='numFound'][.='3']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_exponential_reciprocal']/lst[@name='the']/arr[@name='suggestions']/lst[1]/str[@name='term'][.='<b>the</b> returned']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_exponential_reciprocal']/lst[@name='the']/arr[@name='suggestions']/lst[1]/long[@name='weight'][.='10']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_exponential_reciprocal']/lst[@name='the']/arr[@name='suggestions']/lst[1]/str[@name='payload'][.='ret']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_exponential_reciprocal']/lst[@name='the']/arr[@name='suggestions']/lst[2]/str[@name='term'][.='top of<b>the</b> lake']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_exponential_reciprocal']/lst[@name='the']/arr[@name='suggestions']/lst[2]/long[@name='weight'][.='2']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_exponential_reciprocal']/lst[@name='the']/arr[@name='suggestions']/lst[2]/str[@name='payload'][.='lake']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_exponential_reciprocal']/lst[@name='the']/arr[@name='suggestions']/lst[3]/str[@name='term'][.='star wars: episode v -<b>the</b> empire strikes back']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_exponential_reciprocal']/lst[@name='the']/arr[@name='suggestions']/lst[3]/long[@name='weight'][.='0']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='blended_infix_suggest_exponential_reciprocal']/lst[@name='the']/arr[@name='suggestions']/lst[3]/str[@name='payload'][.='star']"
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testMultiSuggester
 specifier|public
 name|void
